limit the exception message to 255 chars in the subject and 100k in the body.  when we get 'Data too long for column' errors, the exception message includes the whole INSERT statement, which goes into the subject, making Ruby's Net::SMTP choke and burn CPU for 30 mins trying to work through the buffer (before I killed it).

--- a/lib/exception_notifier/views/exception_notifier/exception_notification.text.erb
+++ b/lib/exception_notifier/views/exception_notifier/exception_notification.text.erb
@@ -1,6 +1,6 @@
 A <%= @exception.class %> occurred in <%= @kontroller.controller_name %>#<%= @kontroller.action_name %>:
 
-  <%= raw @exception.message %>
+  <%= raw @exception.message[0..100000] %>
   <%= raw @backtrace.first %>
 
 <%  sections = @sections.map do |section|
