--- a/lib/exception_notifier/views/exception_notifier/_environment.text.erb
+++ b/lib/exception_notifier/views/exception_notifier/_environment.text.erb
@@ -8,4 +8,4 @@
 * Process: <%= raw $$ %>
 * Server : <%= raw `hostname -s`.chomp %>
 * Root   : <%= raw Pathname.new(Rails.root).realpath %> (PWD <%= Pathname.new(Dir.pwd).realpath %>)
-* Version: <%= raw File.read("#{Rails.root}/BRANCH").chomp rescue "unknown" %> (<%= File.read("#{Rails.root}/REVISION").chomp rescue "unknown" %>)
+* Version: <%= raw File.read("#{Rails.root}/TAG").chomp rescue "unknown" %> (<%= File.read("#{Rails.root}/REVISION").chomp rescue "unknown" %>)
