B#46280 filter the env vars using a whitelist

--- a/lib/exception_notifier/views/exception_notifier/_environment.text.erb
+++ b/lib/exception_notifier/views/exception_notifier/_environment.text.erb
@@ -1,11 +1,10 @@
-<% filtered_env = @request.try(:filtered_env) || @env -%>
-<% max = filtered_env.keys.max { |a, b| a.length <=> b.length } -%>
-<% filtered_env.keys.sort.each do |key| -%>
-* <%= raw("%-*s: %s" % [max.length, key, inspect_object(filtered_env[key])]) %>
-<% end -%>
-
 * Time   : <%= raw Time.now %>
-* Process: <%= raw $$ %>
 * Server : <%= raw `hostname -s`.chomp %>
+* Process: <%= raw $$ %>
 * Root   : <%= raw Pathname.new(Rails.root).realpath %> (PWD <%= Pathname.new(Dir.pwd).realpath %>)
 * Version: <%= raw File.read("#{Rails.root}/TAG").chomp rescue "unknown" %> (<%= File.read("#{Rails.root}/REVISION").chomp rescue "unknown" %>)
+
+<% max = @env.keys.max { |a, b| a.length <=> b.length } -%>
+<% @env.keys.sort.each do |key| -%>
+* <%= raw("%-*s: %s" % [max.length, key, inspect_object(@env[key])]) %>
+<% end -%>
