--- a/lib/exception_notifier/views/exception_notifier/_session.text.erb
+++ b/lib/exception_notifier/views/exception_notifier/_session.text.erb
@@ -1,4 +1,1 @@
-<% parameter_filter = ActionDispatch::Http::ParameterFilter.new(@env["action_dispatch.parameter_filter"]) -%>
-<% filtered_session = parameter_filter.filter(@request.session) -%>
-* session id: <%= raw filtered_session['session_id'].inspect.html_safe %>
-* data: <%= raw PP.pp(filtered_session, "") %>
+<%= raw PP.pp(@session, "") %>
