--- a/lib/exception_notifier/views/exception_notifier/_environment.html.erb
+++ b/lib/exception_notifier/views/exception_notifier/_environment.html.erb
@@ -1,4 +1,6 @@
-<% filtered_env = @request.filtered_env -%>
+<%#TODO(willjr): This is from up-stream, is it better? -%>
+<%# filtered_env = @request.filtered_env -%>
+<% filtered_env = @env -%>
 
 <ul style="list-style: none">
   <% filtered_env.keys.map(&:to_s).sort.each do |key| -%>
