--- a/lib/exception_notifier/views/exception_notifier/background_exception_notification.text.erb
+++ b/lib/exception_notifier/views/exception_notifier/background_exception_notification.text.erb
@@ -1,4 +1,4 @@
-<%= @exception.class.to_s =~ /^[aeiou]/i ? 'An' : 'A' %> <%= @exception.class %> occurred in background at <%= raw Time.current %> :
+<%= @exception.class.to_s =~ /^[aeiou]/i ? 'An' : 'A' %> <%= @exception.class %> occurred in <%= @error_source || "background" %> at <%= raw Time.current %> :
 
   <%= @exception.message %>
   <%= @backtrace.first %>
